[package]
name = "tests_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
paillier-common = { version = "0.2.0" }
rand = { version = "0.8.5" }
tokio = { version = "1.43.0", features = ["full"] }
rayon = "1.10.0"

either = { version = "1.15.0", features = ["serde"]}

dashu = {version =  "0.4.2",features = ["rand","serde"] }
rust-bigint = { version = "1.2.0" }

log = "0.4.26"
itertools = "0.14.0"
once_cell = "1.21.3"
indicatif = "0.18.0"

serde = "1.0.219"

tracing = { version = "0.1.41" }
tracing-opentelemetry = { version = "0.31.0" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

opentelemetry = { version = "0.30.0" }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio-current-thread", "jaeger_remote_sampler"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "metrics"] }
serde_json = "1.0.140"